client/src/App.css
body {
  font-family: 'Mulish', sans-serif;
}

.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}


.NavBar {
  color: black;
  background-color: white;
  text-align: right;
  position: fixed;
  top: 0;
  width: 100%;
  height: 90px;
  z-index: 9999;

}
.navlinks {
  text-decoration: none;
}

.RightLinks {
  background-color: #FFFFFF;
}

/* Nav Bar - main page */
.Logo {
  font-family: 'Nanum Brush Script', cursive;
  font-size: 60px;
  color: black;
  left:0;
  float: left;
  margin-right: 120px;
  margin-top: 0px;
  margin-left: 20px;
  text-decoration: none;
}
.Logo:hover {
-webkit-transform: scale(1.1);
        -ms-transform: scale(1.1);
        transform: scale(1.1);
}

/* Signin or Signup Page */
.login_card {
  text-align: center;
  margin-left: 35%;
  margin-top: 15%;
  padding-top: 5%;
  padding-bottom: 5%;
  border-radius: 5%;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.SignInBtn {
  background-color: black;
  border: solid;
  border-width: 2px;
  border-radius: 15%;
  color: white;
  padding: 5px 10px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 15px;
  margin: 10px;
}

.SignInBtn:hover {
  background-color: white;
  color: black;
  cursor: pointer;
}


.Signin {
  margin-top: 200px;
  text-align: center;
}

.Signup {
  float: left;
  width: 30%;
  padding: 30px;
  margin: 10px;
  margin-left: 200px;
}


/* SearchBar */
.SearchContainer {
  background: linear-gradient(to right, #a81dc4 39%, #f39ce7 99%);
  color: white;
  padding: 30px;
  margin-top: 70px;
  position: fixed;
  width: 100%;
  z-index: 8888;
}

.AllThree {
  width: 100%;
  float: center;
  padding: 30px;
  margin-top: 90px;
}

.LeftComponent {
  background-color: #FFFFFF;
  text-align: center;
  width: 18%;
  float: left;
  padding: 30px;
  margin: 10px;
}

.CenterComponent {
  background-color: white;
  width: 40%;
  float: left;
  padding: 30px;
  margin-top: 10px;
  column-count: 3;
  margin-left: 0px;
  margin-bottom: 100px;
}

/* Right Component */

.RightComponent {
  background-color: #FFFFFF;
  width: 20%;
  float: left;
  padding: 30px;
  margin: 10px;
  text-align: center;
}

.cuisine-card {
  background-color: white;
  border-style: solid;
  border-width: 1px;
  border-radius: 15px;
}

/* Footer code */

.Footer {
  background-color: black;
  font-size: 12px;
  color: white;
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 40px;
  text-align: center;
}

.footer-link {
  color: white;
}

.NavLinks {
  right: 0;
  float: right;
  padding: 20px;
}



.SearchBar {
  float: left;
  padding: 40px;
  margin-left: 0px;
  margin-right: 10px;
  width: 400px;
}

.Search:focus {
  width: 100%;
}

.Submit {
  border-radius: 10px;
  cursor: pointer;
  background-color: white;
  color: black;
}

.Submit:hover {
  border-radius: 10px;
  cursor: pointer;
  background-color: black;
  color: white;
}

.FlipCard{
  background-color: transparent;
  width: 300px;
  height: 200px;
  border: 1px solid #f1f1f1;
  perspective: 1000px;
}

.flip-card-inner{
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

.FlipCard:hover .flip-card-inner {
  transform: rotateY(180deg);
}


.CardBack {
  background-color: rgb(194, 189, 189);
  border: 1px dashed;
  padding: 20px;
  margin: 10px;
  border-radius: 15px;
}

.Flippy {
  z-index: 8888;
  border-radius: 15px;
  text-align: center;
}

.MeetupCard {
  background-color: #3366cc;
  padding: 10px;
  margin-right: 15px;
  margin-left: 15px;
  margin-bottom: 15px;
  border-radius: 10px;
  text-align: center;
  color: white;
  height: 160px;
  opacity: 0.5;
}

  /* .MeetupCard:hover {
    opacity:1;
    border-radius:50%;
    cursor: pointer;
  } */

  /* a:link, a:visited {
    color: black;
    padding: 1px;
    margin: 5px;
    text-align: center;
    text-decoration: none;
    border-radius: 5px;
  } */
  
  /* a:hover, a:active {
    text-decoration: none;
    text-transform: uppercase;
    color: black;
    cursor: pointer;
  } */

  /* Center Component Profile */
 

  .Checkboxes {
    float: left;
    width: 30%;
    padding: 30px;
    margin-top: 220px;
    column-count: 2;
  }

  .CommentCard:hover {
    font-weight: 700;
  }

  /* Meetup Details code */
  .MeetupDetails {
    text-align: center;
    margin-right: 30px;
    margin-top: 50px;
    margin-left: 30px;
  }

  .comment-box {
    width: 250px;
    height: 100px;
    margin: 20px;
  }

  .hr {
    width: 18%;
    margin-top: 30px;
    margin-bottom: 30px;
  }

  .CenterComponentProfile {
    background-color: darkgrey;
    width: 40%;
    float: left;
    padding: 30px;
    margin-top: 10px;
    text-align: center;
  }

  .ScrollingList {
    padding-top: 600px;
    animation: marquee infinite 60s linear;
  }

  @keyframes marquee {
    0%   { 
      -moz-transform: translate(0, 0);
      -webkit-transform: translate(0, 0);
      transform: translate(0, 0); }
      100% { 
      -moz-transform: translate(0, -100%);
      -webkit-transform: translate(0, -100%);
      transform: translate(0, -100%); }
  }

  .CreateMeetupBtn {
    border-radius: 10px;
    cursor: pointer;
  }

  .CreateMeetupBtn:hover {
    border-radius: 10px;
    cursor: pointer;
    background-color: #3366cc;
    color: white;
  }

  .MeetupForm {
    width: 60%;
    padding: 5px 20px;
    margin: 8px 5px;
    box-sizing: border-box;
    border-radius: 5px;
  }

  .MeetupForm:focus {
    border: 2px solid black;
  }

  .OutsideForm {
    border: 10px solid;
    margin: 10px; 
    padding: 10px;
    border-radius: 20px;
    background-color: #33cccc;
    color: white;
  }

  .OutsideForm:hover {
    opacity:1;
  }

  .SignInForm {
    width: 30%;
    padding: 5px 20px;
    margin: 8px 5px;
    box-sizing: border-box;
    border-radius: 5px;
  }

  .SignInForm:focus {
    border: 2px solid black;
  }

  .SignUpInput {
    width: 30%;
    padding: 5px 20px;
    margin: 8px 5px;
    box-sizing: border-box;
    border-radius: 5px;
  }

  .SignUpInput:focus {
    border: 2px solid black;
  }

  .checkbox {
    display: inline-flex;
    cursor: pointer;
    position: relative;
}

.checkbox > span {
    color: #34495E;
    padding: 0.5rem 0.23rem;
}

.checkbox > input {
    height: 20px;
    width: 20px;
    -webkit-appearance: none;
    -moz-appearance: none;
    -o-appearance: none;
    appearance: none;
    border: 1px solid white;
    border-radius: 15px;
    outline: none;
    transition-duration: 0.3s;
    background-color: pink;
    cursor: pointer;
  }

.checkbox > input:checked {
  border: 5px solid #3366cc;
    /* border: 5px solid black; */
    /* background-color: white; */
    background-color:  #0AA685 ;
}

.checkbox > input:active {
    border: 2px solid #34495E;
}



/* Recipes page - Inspo, RecipeCard, SearchBar */
.container {
  background-color: #f7f7f7;
  max-width: 1000px;
  min-height: 100vh;
  margin: 30px auto;
  padding: 30px;
  border-radius: 20px;
}

h1, h2, h3, p {
  text-align: center;
}

form {
  display: flex;
  width: 100%;
  justify-content: center;
}

input {
  border: 1px solid #f7f7f7;
  padding: 10px;
  font-size: 16px;

}
input:focus {
  outline: none;
}

.form-control {
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  width: 400px;
}

.btn {
  border-bottom-right-radius: 10px;
  border-top-right-radius: 10px;
  cursor: pointer;

}

.recipes {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  margin-top: 20px;
}

.recipe-card {
  width: 200px;
  background-color: white;
  margin: 10px;
  border-radius: 5px;
  padding-bottom: 10px;
}

.card-image {
  width: 100%;
}

.card-body {
  padding: 10px;
  text-align: center;
}

.recipe-category {
  color: #a1a1a1;
}

